# Test_Settings_Library

./: .gitignore  .gitmodules
build-dynamiclayouts-Desktop_Qt_5_13_0_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  WidgetSettings.db  test.db
build-dynamiclayouts-Desktop_Qt_5_13_0_MinGW_64_bit-Debug/debug/: moc_dialog.cpp
build-dynamiclayouts-Desktop_Qt_5_13_0_MinGW_64_bit-Release/: WidgetSettings.db
dynamiclayouts/: CMakeLists.txt  database.cpp  database.h  dialog.cpp  dialog.h  dynamiclayouts.pro  main.cpp  result.cpp  result.h  settings.cpp  settings.h  statement.cpp  statement.h
dynamiclayouts/cmake/: FindSQLite3.cmake
